Fix alignment

--- a/site/themes/educenter-hugo/assets/scss/_common.scss
+++ b/site/themes/educenter-hugo/assets/scss/_common.scss
@@ -432,3 +432,7 @@ textarea.form-control{
   width: 85px;
   object-fit: cover;
 }
+
+.height-100 {
+  height: 100%;
+}
